fixed spacing

--- a/Final_Project/Contact/Contact.css
+++ b/Final_Project/Contact/Contact.css
@@ -56,11 +56,11 @@ nav li h2 {
     font-weight:500;
     font-size: 20px;
     border-radius: 5px;
-    line-height: 32px;
+    line-height: 22px;
     background-color: transparent;
     border:2px solid black;
     transition: all 0.3s;
-    padding: 10px;
+    padding: 13px;
     margin-bottom: 15px;
     width:100%;
     box-sizing: border-box;
@@ -85,7 +85,7 @@ nav li h2 {
   
   .box{
     background-color: white;
-    max-width:420px; margin:20px auto;
+    max-width:420px; margin:50px auto;
     height: 30px;
   }
   
